Added way to automaticly reboot server